# 8Woc_Mini_Project

./: .gitignore  .project  ErrorCalc.java  Loading.fxml  Open_File.java  README.md  Screen_1.fxml  Screen_2.fxml  TextFileWriter.java  UIDesign.xml  nonesense.txt  pom.xml
8WoCOfficial/: .project  README.md  pom.xml
8WoCOfficial/src/faffimg/: JSONItem.java  Main.java  Scene1.java  Scene2.java
8WoCOfficial/src/main/java/com/mycompany/wocofficial/: JSONItem.java  Main.java  Scene1.form  Scene1.java  Scene2.form  Scene2.java
Backend Java Files/: IMG.java  JSONItem.java  JSONObject.java  Main.java  Test.java  images.java  img.java
Backend Java Files/json/: IMG.java  JSONItem.java  JacksonExample.java  Sample1.java  Test.java  Test_File.java  User.java  images.java  jsonobject.java
ContactEditor/: filePractice.txt
ContactEditor/nbproject/: project.properties
ContactEditor/nbproject/private/: private.properties  private.xml
ContactEditor/src/my/contacteditor/: ContactEditorUI.java  Scene1.form  Scene1.java  Scene2.form  Scene2.java
ExtractLetters-master/: CMakeLists.txt  ExtractLetters.kdev4  json.hpp  main.cpp
ExtractLetters-master/.kdev4/: ExtractLetters.kdev4
Java Files/: .classpath  .project  build.fxbuild
Java Files/src/application/: Main.java  application.css
Project/src/: Screen_1.java
