cmake_minimum_required(VERSION 2.8)
project( ExtractLetters )
find_package( OpenCV REQUIRED )
find_package( Boost 1.62 COMPONENTS filesystem REQUIRED )
include_directories(${Boost_INCLUDE_DIRS})
link_directories(${Boost_LIBRARY_DIRS})
add_executable( ExtractLetters main.cpp )
target_link_libraries( ExtractLetters ${OpenCV_LIBS} )
target_link_libraries( ExtractLetters ${Boost_LIBRARIES} )
